fixed overflow issues in mobile browsers for pre tags

--- a/public/css/liamos.css
+++ b/public/css/liamos.css
@@ -11,6 +11,7 @@ figure {
 pre {
   white-space: pre;
   overflow: auto;
+  overflow-x: scroll;
 }
 
 code {
